# pygrister

./: .gitignore  .readthedocs.yaml  LICENSE.txt  NEWS.txt  gry_bundle.py  gry_bundle.spec  pyproject.toml  readme.rst  tox.ini
doc/: api_doc.rst  apicaller.rst  apitable.rst  conf.py  conf.rst  conf_advanced.rst  gry.rst  gry_advanced.rst  index.rst  intro.rst  misc.rst  overview.rst  scim.rst  types.rst
gry_bundle_files/: cliconverters.py  gryconf.json  gryrequest.json  readme.txt
src/pygrister/: _pygrystart.py  api.py  apicaller.py  cli.py  config.py  exceptions.py
test/: config_test.json  test.py  test_cli.py
