[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Pygrister"
version = "0.5.0"
dependencies = ["requests>=2.31.0",]
requires-python = ">= 3.9"
authors = [{name = "Riccardo Polignieri"},]
description = "A Python client for the Grist API."
readme = "readme.rst"
license = {file = "LICENSE.txt"}
keywords = ["Grist", "relational spreadsheet", "database", "API"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Database",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/ricpol/pygrister"
"Bug Tracker" = "https://github.com/ricpol/pygrister/issues"
Changelog = "https://github.com/ricpol/pygrister/blob/main/NEWS.txt"
Documentation = "https://pygrister.readthedocs.io"
