[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Pygrister"
version = "0.9.1"
dependencies = ["requests>=2.31.0", "typer>=0.15.0"]
requires-python = ">= 3.10"
authors = [{name = "Riccardo Polignieri"},]
description = "A Python client for the Grist API."
readme = "readme.rst"
license = "MIT"
keywords = ["Grist", "relational spreadsheet", "database", "API"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Database",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
devel = ["pyinstaller>=6.17.0", "tox>=4.24.0"]

[project.scripts]
gry = "pygrister.cli:app"

[project.urls]
Repository = "https://github.com/ricpol/pygrister"
"Bug Tracker" = "https://github.com/ricpol/pygrister/issues"
Changelog = "https://github.com/ricpol/pygrister/blob/main/NEWS.txt"
Documentation = "https://pygrister.readthedocs.io"
